# museum-scraper

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
scrapers/: amos_rex.py
src/scrapers/: arkkitehtuuri.py  designmuseo.py  draft.html  kansallisgalleria.py
src/utils/: storage.py
utils/: scraper_helpers.py
